Fix viewing notification on mobile

--- a/app/css/sections/details.styl
+++ b/app/css/sections/details.styl
@@ -1,5 +1,7 @@
 #details {
-  background-color: #f7f7f7;
+  .pane {
+    background-color: #fff;
+  }
 
   header {
     a {
